# mql-signal-scraping

./: README.md  pyproject.toml
src/scraping/: main.py  scraper.py  utils.py
src/scraping/model/: __init__.py  account.py  signal.py  stats.py  top.py
