[tool.poetry]
name = "mql-signal-scraping"
version = "0.1.0"
description = ""
authors = ["IwasakiYuuki <2445yuuki@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.22.0"
pandas = "^2.2.2"
numpy = "^2.0.0"
ipdb = "^0.13.13"
typer = "^0.12.3"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
