[tool.poetry]
name = "mql-signal-scraping"
version = "0.1.0"
description = ""
authors = ["IwasakiYuuki <2445yuuki@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
selenium = "*"
pandas = "*"
numpy = "*"
ipdb = "*"
typer = "*"
tqdm = "*"
jupyterlab = "*"
ydata-profiling = "*"
ipywidgets = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
